--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -54,11 +54,16 @@ input:focus {
 }
 
 #register-banner h1 {
+    position:absolute;
+    top:0;
+    margin-top: 160px;
+    padding: 10px;
+    padding-left: 140px;
     font-size: 4rem;
     font-weight: bold;
     color: #69a5e9;
-    margin-left: 6rem;
-    padding-bottom: 39rem;
+    
+    
 }
 
 #register-form{
