generator-password-options

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -56,21 +56,18 @@ input:focus {
 #register-banner h1 {
     position:absolute;
     top:0;
-    margin-top: 160px;
-    padding: 10px;
-    padding-left: 140px;
+    margin-top: 158px;
+    padding: 8px;
     font-size: 4rem;
     font-weight: bold;
     color: #69a5e9;
-    
-    
 }
 
 #register-form{
     background-color: #b8d1ed;
     padding: 2rem;
-    width: 100%;
-    height: 100%;
+    width: 120%;
+    height: 110%;
     display: flex;
     flex-direction: column;
 }
@@ -85,7 +82,7 @@ input:focus {
     text-align: center;
     margin-bottom: 1.5rem;
     color: #726e6e;
-    font-size: 0.8rem;
+    font-size: 1rem;
 }
 
 .form-control {
@@ -105,13 +102,13 @@ input:focus {
     padding: 0.6rem 0;
 }
 
-#generate-password {
+#open-generate-password {
     font-weight: bold;
     cursor: pointer;
     transition: 0.4s;
 }
 
-#generate-password:hover {
+#open-generate-password:hover {
     color: #0099ff;
 }
 
@@ -133,7 +130,9 @@ input:focus {
     margin-bottom: 0.5rem;
 }
 
-#register-form input[type="submit"] {
+#register-form input[type="submit"],
+#generate-options button,
+#copy-password {
     background-color: rgb(213, 176, 240);
     opacity: 0.8;
     color: #0f0e0e;
@@ -151,3 +150,43 @@ input:focus {
     opacity: 1;
 }
 
+/* Second version */
+#generate-options {
+    margin-bottom: 1rem;
+    padding: 1rem;
+    border: 1px solid #ddd;
+}
+
+#generate-options .form-control {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#generate-options label {
+    font-size: 0.8rem;
+}
+
+#generate-options input[type="text"] {
+    max-width: 30px;
+    text-align: center;
+    border: 1px solid #ccc;
+}
+
+#generate-options button {
+    background-color: #0099ff;
+    display: block;
+    margin: 0 auto;
+}
+
+#copy-password {
+    margin: 1rem auto;
+    background-color: transparent;
+    border: 2px solid #69a5e9;
+    color: #69a5e9;
+    padding: 0.5rem 1rem;
+}
+
+.hide {
+    display: none;
+}
