--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -44,6 +44,7 @@ input:focus {
   justify-content: center;
   width: 100%;
   height: 200px;
+  margin: 1rem;
 }
 
 #banner-layer {
@@ -68,6 +69,7 @@ input:focus {
   font-weight: bold;
   color: #69a5e9;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+  margin-bottom: 0.5rem;
 }
 
 #form-container {
@@ -254,14 +256,22 @@ input:focus {
     padding: 1.5rem;
   }
 
-  #banner-layer {
-    justify-content: flex-start;
-  }
+  #register-form h2 {
+    text-align: left;
+    margin-bottom: 1rem;
+    font-size: clamp(1.5rem, 4vw, 2.2rem);
+}
+
+#register-form p {
+    text-align: left;
+    margin-bottom: 1.5rem;
+    color: #726e6e;
+    font-size: 0.8rem;
+}
 
   #register-banner h1 {
     position: relative;
     margin-top: 19rem;
-    padding-left: 1rem;
     font-size: clamp(2rem, 3rem, 4rem);
   }
 }
